force-app/main/default/objects/Quota__c/fields/Account_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Account_Owner__c</fullName>
    <formula>Account__r.Owner.FirstName &amp; &quot; &quot; &amp; Account__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account - Account Owner</label>
    <type>Text</type>
</CustomField>