force-app/main/default/objects/Quota__c/fields/Duplicatecheck__c.field-meta.xml
<CustomField>
    <fullName>Duplicatecheck__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Field to check whether the quota already exists or not.</description>
    <label>Duplicatecheck</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>