force-app/main/default/objects/Quota__c/fields/PMC_Global_Quota__c.field-meta.xml
<CustomField>
    <fullName>PMC_Global_Quota__c</fullName>
    <label>PMC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC</valueSetName>
    </valueSet>
</CustomField>