force-app/main/default/objects/Quota__c/fields/Quota_Date__c.field-meta.xml
<CustomField>
    <fullName>Quota_Date__c</fullName>
    <label>Quota Date</label>
    <type>Date</type>
</CustomField>