force-app/main/default/objects/Quota__c/fields/Quota_Month_number__c.field-meta.xml
<CustomField>
    <fullName>Quota_Month_number__c</fullName>
    <formula>MONTH(Quota_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota - Month (Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>