force-app/main/default/objects/Quota__c/fields/Quota_Year_Number__c.field-meta.xml
<CustomField>
    <fullName>Quota_Year_Number__c</fullName>
    <formula>YEAR(Quota_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota - Year (Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>