force-app/main/default/objects/Quota__c/fields/Quota_YearMonth__c.field-meta.xml
<CustomField>
    <fullName>Quota_YearMonth__c</fullName>
    <formula>TEXT(YEAR(Quota_Date__c)) &amp;
TEXT(MONTH(Quota_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota - YearMonth</label>
    <type>Text</type>
</CustomField>