force-app/main/default/objects/Quota__c/fields/Target_YTD__c.field-meta.xml
<CustomField>
    <fullName>Target_YTD__c</fullName>
    <label>Target YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>