force-app/main/default/objects/Quota__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Country__c</columns>
    <columns>PMC_Global_Quota__c</columns>
    <columns>Target__c</columns>
    <columns>Target_YTD__c</columns>
    <columns>Quota_Date_Month__c</columns>
    <columns>Quota_Month_number__c</columns>
    <columns>Quota_Year_Number__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>